--- a/01-start/src/App.css
+++ b/01-start/src/App.css
@@ -1,33 +1,42 @@
-.App {
-  font-family: Arial, sans-serif;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
 }
 
-.stopwatch-display {
-  font-size: 3em;
-  margin-bottom: 20px;
-  font-family: 'Urbanist', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.control-buttons button {
-  margin: 0 10px;
-  padding: 10px 20px;
-  font-size: 1em;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.lap-list {
-  margin-top: 20px;
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
 }
 
-.lap-list ul {
-  list-style-type: none;
-  padding: 0;
+.card {
+  padding: 2em;
 }
 
-.lap-list li {
-  font-size: 1.2em;
-  margin: 5px 0;
+.read-the-docs {
+  color: #888;
 }
